--- a/react-basic-setup/3.1.md
+++ b/react-basic-setup/3.1.md
@@ -43,4 +43,4 @@ This setup is all you need to use React. However this setup does not make use of
 #### Notes
 
 * An alternative `react.js` file called `react-with-addons.js` is available [containing a collection of utility modules](https://facebook.github.io/react/docs/addons.html) for building React applications. The "addons" file can be used in place of the `react.js` file.
-* Don’t make the `<body>` element the root node for your React app. Always put a root `<div>` into `<body>`, give it an ID, and render into it. This gives React its own pool to play in without worrying about what else potentially wants to make changes to the children of the `<body>` element.
+* Don't make the `<body>` element the root node for your React app. Always put a root `<div>` into `<body>`, give it an ID, and render into it. This gives React its own pool to play in without worrying about what else potentially wants to make changes to the children of the `<body>` element.
