--- a/react-jsx/5.7.md
+++ b/react-jsx/5.7.md
@@ -1,6 +1,6 @@
 # Defining Attributes/Props in JSX
 
-In the previous chapter, section X.X, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes. If it helps, attributes/props are to React nodes what arguments are to functions.
+In the previous chapter, section 4.4, I discussed passing `React.createElement(type, props, children)` attributes/props when defining React nodes. Since JSX is transformed into `React.createElement()` function calls you basically already have a understanding of how React node attributes/props work. However, since JSX is used to express XML-like nodes that get turned into HTML, attribute/props are defined by adding the attributes/props to JSX expressions as name-value attributes. If it helps, attributes/props are to React nodes what arguments are to functions.
 
 In the code example below I am defining a React `<li>` element node, using JSX, with five attributes/props. One is a non-standard HTML attribute (e.g., `foo:'bar'`) and the others are known HTML attributes.
 
