--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -8,7 +8,7 @@ Props take on several roles:
 2. Props become values stored in a `prop` object as an instance property of `React.createElement()` instances  and `React.createClass()` (i.e., `this.props.[NAME OF PROP]`).
 3. A few special props have side effects (e.g., [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
-In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
+In one sense you can think of props as the configuration options for React nodes/components and in another sense you can think of them as HTML attributes.
 
 In the code example below I am defining a React `<li>` element node with five props. One is a non-standard HTML attribute (i.e., `foo:'bar'`) and the others are known HTML attributes.
 
