--- a/react-props/7.2.md
+++ b/react-props/7.2.md
@@ -1,6 +1,6 @@
 # Sending Component Props
 
-Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, below the `Badge` component is define first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e. `<Badge name="Bill" />`).
+Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, below the `Badge` component is define first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e., `<Badge name="Bill" />`).
 
 ```
 var Badge = React.createClass({
